[tool.poetry]
name = "firekeep"
version = "0.1.0"
description = "A Flask app that follows Domain-Driven Design, Repository, Service Layer, and CQRS patterns. For educational purposes only."
authors = ["Neil Van <nvq.alino@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pydantic = "^1.8.2"
Flask-Cors = "^3.0.10"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"
types-Werkzeug = "^1.0.5"
autoflake = "^1.4"
bandit = "^1.7.0"
flake8 = "^4.0.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3